f5/views/css/home.css
/* use !important to override bootstrap settings */

body {
    font-family: helvetica;
    background-color: #000;
    color: #fff;
    padding-top: 40px;
    padding-left: 10px;
    padding-right: 10px;
}

.btn {
    border: 1px solid;
    background: rgba(0, 0, 0, 0.5);
}

.btn:focus, .btn:hover {
    /* background-color: #08c; */
    background-color: rgba(0, 0, 0, 0.8);
    text-shadow: -1px -1px 2px #ff8c00, 1px 1px 2px #ff8c00; /* makes text glow. ff8c00 is orange */
}

.mycontrol {
    font-size: 1.2em;
    font-weight: bold;
    background: rgba(0, 0, 0, 0.2);
}

.mycontrol:hover, .mycontrol:focus {
    text-shadow: -1px -1px 2px #ff8c00, 1px 1px 2px #ff8c00 !important; /* makes text glow */
}

.mydropdownmenu {
    background: rgba(0, 0, 0, 0.8);
}

.mydropdownbutton {
    /* these two lines make empty spaces in link clickable */
    display: inline-block;
    width: 100%;
    color: #fff !important;
    font-family: helvetica;
    font-weight: bold !important;
    font-size: 1.3em;
}

.mydropdownbutton:hover, .mydropdownbutton:focus {
    color: #fff !important;
    background: rgba(0, 0, 0, 0.2) !important;
    text-shadow: -1px -1px 2px #ff8c00, 1px 1px 2px #ff8c00 !important; /* makes text glow */
}

#randomposts {
    margin: 10px;
}

.myrandomrow {
    margin-bottom: 20px;
}

.randompost {
    margin: 5px;
}

a.randompost {
    color: #fff;
    text-decoration: none;
}

a.mydropdownbutton {
    text-decoration: none;
}

/* for random posts */

.posttitle {
    font-size: 2em;
    line-height: 1em;
    font-weight: bold;
    color: #00BFFF; /* 08c is default bootstrap link color */
    margin-left: -5px; /* spans have a default margin */
    margin-right: 10px;
}

.postbody {
    font-size: 1.5em;
    font-family: georgia;
    margin-right: 10px;
    white-space: pre-wrap;
}

.postsubject {
    font-size: 1.7em;
    font-weight: bold;
    font-family: helvetica;
    color: #888;
    margin-right: 10px;
}

.postdate {
    font-size: 1.5em;
    font-weight: bold;
    color: #555;
}

.mynavbar {
    background: rgba(0, 0, 0, 0.5) !important; /* transparent !important; */
}

.modal#newpostform {
    /* modal margin-left center screen, so -40% means 10% */
    margin-left: -10%;
    width: 60%;
    background: rgba(0, 0, 0, 0.1);
}

#signupform {
    padding: 10px;
    margin-right: 10px;
    background: rgba(0, 0, 0, 0.5);
}

#signupbutton {
    margin-left: 10px;
}

.modal#settingsmodal {
    /* modal margin-left center screen, so -40% means 10% */
    margin-left: -40%;
    width: 80%;
    background: rgba(0, 0, 0, 0.5);
}

.modal-backdrop {
    background: rgba(0, 0, 0, 0.1) !important;
}

.myformfooter {
    background: rgba(0, 0, 0, 0) !important;
    border: none;
}

.mylegend {
    font-size: 3em;
    font-weight: bolder;
    color: #fff;
    /* background: rgba(0, 0, 0, 0.2); */
    /* border-bottom: 2px solid; */
    border: none;
}

.mylabel {
    font-size: 1.5em;
    font-weight: bold;
    /* background: rgba(0, 0, 0, 0.5); */
}

input {
    font-family: georgia;
    font-size: 1.5em !important; /* fixing short input height */
    color: #fff !important;
    /* text-shadow: -1px -1px 2px #ff8c00, 1px 1px 2px #ff8c00; /\* makes text glow *\/ */
    background: rgba(0, 0, 0, 0.8) !important;
}

textarea {
    font-family: georgia;
    font-size: 1.5em;
    color: #fff !important;
    /* text-shadow: -1px -1px 2px #ff8c00, 1px 1px 2px #ff8c00; /\* makes text glow *\/ */
    background: rgba(0, 0, 0, 0.8) !important;
}

/* changing selection color */
*::selection {
    background: #08c;
}

*::-moz-selection {
    background: #08c;
}

#newposttitle {
    /* font-size: 2em !important; */
    height: 1.3em !important;
}

#newpostsubject {
    /* font-size: 2em !important; */
    height: 1.3em !important;
}

.placeholder {
    color: #fff !important;
}

.placeholder::-webkit-input-placeholder {
    color: #999 !important;
}

.placeholder:-moz-placeholder { /* ff 18- */
    color: #999 !important;
}

.placeholder::-moz-placeholder { /* ff 19+ */
    color: #999 !important;
}

.placeholder:-ms-input-placeholder {
    color: #999 !important;
}

.shortcuttip {
    float: right;
}

.tooltip {
    font-weight: bold;
    font-size: 1em;
}

#settingsmodal {
    padding: 10px;
}

.highlight {
    /* background-color: #ff8; */
    /* border: 2px dotted #fff; */
    color: #ff8c00;
}

